--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,16 @@
 body {
-  background-color: #f9f7fe;
+  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   font-family: "roboto", sans-serif;
 }
 a {
   color: #885df1;
 }
 .weather-app {
-  background: white;
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(255, 246, 236) 39.5%,
+    rgba(100, 46, 122, 0.23) 100.2%
+  );
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -74,8 +78,8 @@ main {
 .weather-forecast {
   margin-top: 30px;
 
-  color: black;
-
+  text-align: center;
+  display: flex;
   justify-content: space-around;
 }
 .weather-forecast-date {
@@ -84,9 +88,9 @@ main {
 }
 .weather-forecast-temperatures {
   font-size: 13px;
+  color: #f65282;
 }
 .weather-forecast-temperature-min {
-  opacity: 0.5;
 }
 footer {
   border-top: 1px solid #f9f7fe;
